# ZnVja29mZg

./: .gitignore  CMakeLists.txt  Makefile  README  flake.nix  meson.build
include/: app.h  audio.h  gfx.h  rnd.h  sys.h  util_math.h  vec.h
src/: app.c  gfx.c  s0.c  s3.c  s6.c  s7.c  s8.c  s9.c  sD.c  sF.c  sys.c  util_math.c  vec.c
src/core/: app.c  audio.c  gfx.c  main.c  rnd.c  sys.c
src/visuals/: s1.c  s2.c  s4.c  s5.c  sA.c  sB.c  sC.c  sE.c
